update/correction index.html

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             <NAV>
                 <div id="head-nav-top">
                     <div class="head-nav-top hnt-account">
-                        <img src="images/icon-mon-compte.png" alt="icone mon compte">
-                        Mon compte
+                        <a href="#"><img src="images/icon-mon-compte.png" alt="icone mon compte"></a>
+                        <a href="#">Mon compte</a>
                     </div>
                     <div id="head-nav-top hnt-basket">
-                        <img src="images/icon-mon-panier.png" alt="icone mon panier">
+                        <a href="#"><img src="images/icon-mon-panier.png" alt="icone mon panier"></a>
+                        <a href="#">Votre panier est vide</a>
                     </div>
                 </div>
                 <div id="head-nav-user">
