--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SPORT.COM</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body> 
+<body>
+    <!-- HEADER  -->
     <HEADER>
         <div id="head-center">
             <div id="head-enseigne">
                 <img src="images/logo.png" alt="logo enseigne sport.com">
+                <p>Lorem ipsum dolor <span>sit amet</span></p>
             </div>
             <NAV>
                 <div id="head-nav-top">
@@ -19,13 +21,13 @@
                         <a href="#"><img src="images/icon-mon-compte.png" alt="icone mon compte"></a>
                         <a href="#">Mon compte</a>
                     </div>
-                    <div id="head-nav-top hnt-basket">
+                    <div class="head-nav-top hnt-basket">
                         <a href="#"><img src="images/icon-mon-panier.png" alt="icone mon panier"></a>
                         <a href="#">Votre panier est vide</a>
                     </div>
                 </div>
                 <div id="head-nav-user">
-                    Bonjour Julien
+                    <h3>Bonjour Julien</h3>
                 </div>
                 <div id="head-nav-foot">
                     <div class="head-nav-foot hnf-contact">
@@ -41,118 +43,136 @@
             </NAV>
         </div>
     </HEADER>
+    <!-- CONTANT PAGE  -->
     <div id="contant-page">
         <div id="header-background">
-            <!-- header-page-catalogue -->
+            <img src="images/header-page-catalogue.png" alt="">
         </div>
         <SECTION>
             <ARTICLE>
-                <div class="gant-boxe type-one">
+                <div class="discount-on-box">
+                    <div class="gant-boxe type-one"> 
+                        <p><b>NTS</b> DE BOXE COMBAT KLIMAX V3</p>
+                    </div>
                     <div class="discount">
-                        <p>- 45%</p>
+                        <p><b>- 45%</b></p>
                     </div>
                 </div>
-                <div class="article-foot">
-                    <div class="view-article va-one">
-                        <a href="#">Voir la vente</a>
-                    </div>
-                    <div class="article-price">
-                        <p class="old-price">120 €</p>
-                        <p class="new-price">65 €</p>
+                <div class="cadrage-article">
+                    <div class="article-foot">
+                        <div class="view-article">
+                            <a href="#">Voir la vente</a>
+                        </div>
+                        <div class="article-price">
+                            <p class="old-price">120 €</p>
+                            <p class="new-price"><b>65 €</b></p>
+                        </div>
                     </div>
                 </div>
             </ARTICLE>
             <ARTICLE>
-                <div class="gant-boxe type-two">
+                <div class="discount-on-box">
+                    <div class="gant-boxe type-two"> 
+                        <p><b>NTS</b> DE BOXE COMBAT KLIMAX V3</p>
+                    </div>
                     <div class="discount">
-                        <p>- 60%</p>
+                        <p><b>- 60%</b></p>
                     </div>
                 </div>
-                <div class="article-foot">
-                    <div class="view-article">
-                        <a href="#">Voir la vente</a>
-                    </div>
-                    <div class="article-price">
-                        <p class="old-price">120 €</p>
-                        <p class="new-price">65 €</p>
+                <div class="cadrage-article">
+                    <div class="article-foot">
+                        <div class="view-article">
+                            <a href="#">Voir la vente</a>
+                        </div>
+                        <div class="article-price">
+                            <p class="old-price">120 €</p>
+                            <p class="new-price"><b>65 €</b></p>
+                        </div>
                     </div>
                 </div>
             </ARTICLE>
             <ARTICLE>
-                <div class="gant-boxe type-one">
+                <div class="discount-on-box">
+                    <div class="gant-boxe type-one"> 
+                        <p><b>NTS</b> DE BOXE COMBAT KLIMAX V3</p>
+                    </div>
                     <div class="discount">
-                        <p>- 30%</p>
+                        <p><b>- 30%</b></p>
                     </div>
                 </div>
-                <div class="article-foot">
-                    <div class="view-article">
-                        <a href="#">Voir la vente</a>
-                    </div>
-                    <div class="article-price">
-                        <p class="old-price">120 €</p>
-                        <p class="new-price">65 €</p>
+                <div class="cadrage-article">
+                    <div class="article-foot">
+                        <div class="view-article">
+                            <a href="#">Voir la vente</a>
+                        </div>
+                        <div class="article-price">
+                            <p class="old-price">120 €</p>
+                            <p class="new-price"><b>65 €</b></p>
+                        </div>
                     </div>
                 </div>
             </ARTICLE>
             <ARTICLE>
-                <div class="gant-boxe type-two">
+                <div class="discount-on-box">
+                    <div class="gant-boxe type-two"> 
+                        <p><b>NTS</b> DE BOXE COMBAT KLIMAX V3</p>
+                    </div>
                     <div class="discount">
-                        <p>- 70%</p>
+                        <p><b>- 70%</b></p>
                     </div>
                 </div>
-                <div class="article-foot">
-                    <div class="view-article">
-                        <a href="#">Voir la vente</a>
-                    </div>
-                    <div class="article-price">
-                        <p class="old-price">120 €</p>
-                        <p class="new-price">65 €</p>
+                <div class="cadrage-article">
+                    <div class="article-foot">
+                        <div class="view-article">
+                            <a href="#">Voir la vente</a>
+                        </div>
+                        <div class="article-price">
+                            <p class="old-price">120 €</p>
+                            <p class="new-price"><b>65 €</b></p>
+                        </div>
                     </div>
                 </div>
             </ARTICLE>
         </SECTION>
     </div>
+    <!-- FOOTER  -->
     <FOOTER>
         <div id="top-block-footer">
-
+            <!-- cellule-vide  -->
         </div>
-        <div id="nav-block-footer">
-            <a href="#" class="link-nav-footer lnf-qsn">Qui sommes-nous</a>
-            <p class="circle-nav-footer"></p>
-            <a href="#" class="link-nav-footer lnf-contact">Contact</a>
-            <p class="circle-nav-footer"></p>
-            <a href="#" class="link-nav-footer lnf-assistance">Assistance</a>
-            <p class="circle-nav-footer"></p>
-            <a href="#" class="link-nav-footer lnf-cgv">CGV</a>
+        <div id="middle-block-footer">
+            <!-- cellule transparente -->
         </div>
         <div id="services-block-footer">
             <div class="services-footer">
                 <div class="services-logo-footer">
                     <img src="images/icon-livre.png" alt="icone livre">
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus culpa ducimus, natus dolores sunt optio a, hic voluptas sapiente, molestiae ab at corrupti omnis nulla error blanditiis? Necessitatibus, corrupti ea.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus culpa ducimus.</p>
             </div>
             <div class="services-footer">
                 <div class="services-logo-footer">
                     <img src="images/icon-camion.png" alt="icone camion">
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus culpa ducimus, natus dolores sunt optio a, hic voluptas sapiente, molestiae ab at corrupti omnis nulla error blanditiis? Necessitatibus, corrupti ea.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus culpa ducimus.</p>
             </div>
             <div class="services-footer">
                 <div class="services-logo-footer">
                     <img src="images/icon-cadenat.png" alt="icone cadenas">
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus culpa ducimus, natus dolores sunt optio a, hic voluptas sapiente, molestiae ab at corrupti omnis nulla error blanditiis? Necessitatibus, corrupti ea.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus culpa ducimus.</p>
             </div>
             <div class="services-footer">
                 <div class="services-logo-footer">
                     <img src="images/icon-pouce.png" alt="">
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus culpa ducimus, natus dolores sunt optio a, hic voluptas sapiente, molestiae ab at corrupti omnis nulla error blanditiis? Necessitatibus, corrupti ea.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus culpa ducimus.</p>
             </div>
         </div>
-        <div id="bar-block-footer"></div>
-        <div class="social-block-footer">
+        <div id="bar-block-footer">
+            <!-- ligne de séparation  -->
+        </div>
+        <div id="social-block-footer">
             <div class="social-logo-footer">
                 <a href="#"><img src="images/icon-facebook.png" alt="logo facebook"></a>
             </div>
@@ -164,6 +184,17 @@
             </div>
         </div>
         <p id="copyright">©️ 2013 Sport privilege. Tous droits réservés.</p>
+
+        <div id="nav-block-footer">
+            <a href="#" class="link-nav-footer lnf-qsn">Qui sommes-nous</a>
+            <p class="circle-nav-footer"></p>
+            <a href="#" class="link-nav-footer lnf-contact">Contact</a>
+            <p class="circle-nav-footer"></p>
+            <a href="#" class="link-nav-footer lnf-assistance">Assistance</a>
+            <p class="circle-nav-footer"></p>
+            <a href="#" class="link-nav-footer lnf-cgv">CGV</a>
+        </div>
+        <div class="close-footer"></div>
     </FOOTER>
 </body>
 </html>
